# hipesc

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  Correction.cpp  Correction.h  FastQ.cpp  FastQ.h  Jobs.cpp  Jobs.h  Paf.cpp  Paf.h  README.md  compile.sh  compile_and_run.sh  consent.h  hipesc  main.cpp  mpi_main.cpp  my_program  utils.h
src/: compression.cpp  compression.h  consent.h  correction.cpp  correction.h  fastq.cpp  fastq.h  paf.cpp  paf.h  utils.cpp  utils.h
